<resources>
  <string name="app_name">Shortcuts</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_help">Help</string>
  <string name="menu_opensource">Opensource license</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">앱공유</string>
  <string name="menu_send">Send</string>
  <string name="error_desc">A temporary error has occurred. Click on the screen to restart the app.</string>
  <string name="menu_review">리뷰남기기</string>
  <string name="nav_communication">Communication</string>
</resources>
