<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group>
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/nav_opensource"
        android:icon="@drawable/ic_open_source"
        android:title="@string/menu_opensource"/>
  </group>
  <item android:title="@string/nav_communication">
    <menu>
      <item
          android:id="@+id/nav_share"
          android:icon="@drawable/ic_menu_share"
          android:title="@string/menu_share"/>
      <item
          android:id="@+id/nav_review"
          android:icon="@drawable/ic_review"
          android:title="@string/menu_review"/>
    </menu>
  </item>
</menu>